<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mola_gnss_to_markers</name>
  <version>0.0.0</version>
  <description>Takes GNSS (GPS) readings, a MOLA georeferenced map, and publishes markers to visualize the datums as ellipsoids on the map</description>
  <maintainer email="joseluisblancoc@gmail.com">José Luis Blanco-Claraco</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mrpt_nav_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>mrpt_libobs</depend> <!-- mrpt-topography, actually -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
